# Parallel_Inversion

./: README.md
clion/: CMakeLists.txt  main.c
